<resources>
    <string name="app_name">BitCashier</string>
    <string name="home">Home</string>
    <string name="add_expense">Add Expense</string>
    <string name="transaction_history">Transaction History</string>
    <string name="recurring_transactions">Recurring Transactions</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="threshold">Threshold</string>
    <string name="username_login">Username</string>
    <string name="user_email_signup">username@gmail.com</string>

    <string-array name="category">
        <item>Select a category</item>
        <item>Shopping</item>
        <item>Transport</item>
        <item>Food</item>
    </string-array>

    <string-array name="currency">
        <item>Select a currency</item>
        <item>EUR (€) - European Euro</item>
        <item>USD ($) - United States Dollars</item>
        <item>GBP (£) - Great Britain Pound</item>
        <item>INR (₹) - Indian Rupees</item>
        <item>YEN (¥) - Japanese Yen</item>
        <item>SGD ($) - Singapore Dollars</item>
        <item>AUD ($) - Australian Dollars</item>
        <item>CHF (₣) - Swiss Franc</item>
        <item>CAD ($) - Canadian Dollars</item>
    </string-array>

    <string-array name="payment_type">
        <item>Select a payment type</item>
        <item>Cash</item>
        <item>Debit Card</item>
        <item>Credit Card</item>
        <item>Demand Draft</item>
        <item>SEPA</item>
    </string-array>

    <string-array name="filter_options">
        <item>Select a filter option</item>
        <!--Choose a month and year (default to current month and year)-->
        <item>Category Expenses for a Month</item>
        <!--Choose a year (default to current year)-->
        <item>Category Expenses for a Year</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_income">Total Income</string>
    <string name="total_expense">Total Expense</string>
    <string name="total_balance">Total Balance</string>
    <string name="add_income">Add Income</string>
    <string name="add_incomefab">Add IncomeFab</string>
    <string name="select_category_threshold">Select a category to see it\'s threshold and expense</string>
    <string name="current_threshold">Threshold</string>
    <string name="current_expense">Expense</string>
    <string name="statistics">Statistics</string>
    <string name="login_user_name_hint">User Name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_screen_header">User Login</string>
    <string name="login_screen_app_logo">App Logo</string>
    <string name="login_screen_sign_up">Sign up</string>
    <string name="new_user_please_sign_up">New User? Please sign up!</string>
    <string name="login_screen_login_btn">Login</string>
    <string name="export_data_btn">Export Data</string>
    <string name="fab_export_data">Export Data</string>

    <string-array name="settings_fragment">
        <item>Help</item>
        <item>About</item>

    </string-array>

    <string-array name="help_QnA">

        <item>How do I change the currency of an expense</item>
        <item>Can I set a default currency?</item>
        <item>Can BitCashier do currency conversion between multiple currencies?</item>
        <item>What if BitCashier does not include my currency?</item>
        <item>How do I use Bitcashier?</item>
        <item>Why do I have to add contacts while I add expense? Can I add a friend without an email address or phone number?</item>
        <item>How do I export my transactions to a spreadsheet or Excel?</item>
        <item>Help, I can not log in to my account!</item>
        <item>Is there a Bitcashier app for Windows Phone?</item>
        <item>Why is not my password working?</item>
        <item>How do I create a recurring expense?</item>
        <item>How do I Update an expense?</item>
        <item>How do I Delete an expense?</item>
        <item>How can I delete a recurring transaction?</item>
        <item>Where can I view the monthly or yearly expenses?</item>


    </string-array>


       <string name="settings_help_btn">Help</string>
       <string name="settings_about_btn">About</string>


    <string name="about_home"> This is the home fragment where the user can get an overlook of his account. It will display the total income, total expense and the remaining balance of the user</string>
    <string name="about_sidenavigation"> The side navigation pane gives a overall view of the app. The user can select any of the options available depending on their requirement</string>
    <string name="about_addexpense">  In the Add expense page, all the fields are mandatory except the recurring transaction button and the notes. Here, the user should enter all the mandatory details and click on add expense to add a transaction</string>
    <string name="about_addincome"> In the Add income page, user needs to enter all the details related to their source of income. Once entered the amount and the  notes , user should click on Add income to add it into the total income</string>
    <string name="about_transactionhistory"> Transaction history page has various functionality. It can be used to view the transaction history through various filters like category, payment type and date. It can also be used to update or delete the transaction by selecting that particular transaction</string>
    <string name="about_statistics"> Statistics page is used to view the total expenses done in a month or year for each category , by selecting the respective filters</string>
    <string name="about_threshold"> Add threshold page is used for maintaining budget for each category by setting up a threshold value for the respective category</string>
    <string name="logout">Logout</string>


</resources>
