<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/menuAddIncome"
        android:icon="@drawable/income"
        android:title="@string/add_income" />

    <item
        android:id="@+id/menuAddExpense"
        android:icon="@drawable/addtransaction"
        android:title="@string/add_expense" />

    <item
        android:id="@+id/menuTransactionHistory"
        android:icon="@drawable/transactionhistory"
        android:title="@string/transaction_history" />

    <item
        android:id="@+id/menuRecurringTransactions"
        android:icon="@drawable/recurringtransaction"
        android:title="@string/recurring_transactions" />

    <item
        android:id="@+id/menuStatistics"
        android:icon="@drawable/statistics"
        android:title="@string/statistics" />

    <item android:title="@string/others">

        <menu>

            <item
                android:id="@+id/menuThreshold"
                android:icon="@drawable/threshold"
                android:title="@string/threshold" />

            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />

        </menu>

    </item>

</menu>